# -mnist-meter-cpp

./: .gitignore  CMakeLists.txt  PIPELINE.md  README.md  analyze_model.py  batch_inference.py  generate_test_images.py  model.py  pyproject.toml  test_inference.py
include/: inference.h
src/: batch_inference.cpp  inference.cpp  main.cpp
